--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vuedraggable": "^2.20.0",
     "vuex": "^3.1.1"
   },
